unpackaged/main/default/objects/Point_of_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Point of Contact for</relationshipLabel>
    <relationshipName>Points_of_Contact1</relationshipName>
    <type>Lookup</type>
</CustomField>