unpackaged/main/default/objects/Point_of_Contact__c/fields/Point_of_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact_Email__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Point of Contact Email</label>
    <type>Text</type>
</CustomField>