unpackaged/main/default/objects/Point_of_Contact__c/fields/Point_of_Contact_for__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact_for__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Point of Contact for</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Points of Contact</relationshipLabel>
    <relationshipName>Points_of_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>