unpackaged/main/default/objects/Point_of_Contact__c/fields/Point_of_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact_Type__c</fullName>
    <label>Point of Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Point_of_Contact_Type</valueSetName>
    </valueSet>
</CustomField>